# play2048

./: .gitignore  CHANGELOG-OPENAI.md  DOCUMENTATION-UPDATE.md  GAME_RESULTS.md  IMPLEMENTATION-SUMMARY.md  PACKAGE_MANAGEMENT.md  PROJECT_STRUCTURE.md  QUICKSTART-LLM-EXPORT.md  QUICKSTART-SKILLS.md  README-GPT52-SKILLS.md  README.md  UV_GUIDE.md  index.html  paper_llm_focus.md  pyproject.toml  requirements.txt  setup.sh  spec.md  sync.sh  test_alphazero.py  test_alphazero_play.py  test_cnn.py  test_cnn_model.sh  test_play.py
bench/: README.md  bench2048.js  results.json  results_summary.md
data/: README.md
docs/: ALPHAZERO-COMPLETE.md  ALPHAZERO-GUIDE.md  ALPHAZERO-IMPLEMENTATION-CHECKLIST.md  ALPHAZERO-STATUS.md  ALPHAZERO-TRAINING-PLAN.md  AZURE-COMPATIBILITY.md  CNN-IMPLEMENTATION-SUMMARY.md  CNN-TRAINING-GUIDE.md  FEATURE-LLM-EXPORT.md  IMPLEMENTATION-SUMMARY.md  MODEL-COMPARISON.md  OPENAI-SUPPORT.md  QUICKSTART-OPENAI.md  TRANSFORMER-IMPLEMENTATION-CHECKLIST.md  TRANSFORMER-TRAINING-PLAN.md  spec-gpt52-skills.md
evaluation/: README.md  game_simulator.py  offline_eval.py  visualize_results.py
models/: README.md  __init__.py
models/cnn/: README.md  __init__.py  cnn_policy.py
models/dual/: __init__.py  (+2 more)
paper/: README.md  aurora2048_llm.tex
replay/: 2048-history-2026-01-06T00-55-14.json
scripts/: generate_dataset.py
specs/: README.md  generate_dataset.md  spec.md  train_spec.md
training/: README.md  __init__.py  augmentation.py  dataloader.py  dataset.py  mcts.py  selfplay.py  train_alphazero.py  train_cnn.py  train_transformer.py  utils.py
(+12 files in other folders)
