[project]
name = "play2048-sdd"
version = "1.0.0"
description = "Spec-Driven Development demonstration using 2048 game"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Spec-Driven Development Team"}
]
keywords = ["spec-driven", "development", "2048", "game", "ai", "expectimax"]

dependencies = [
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tensorboard>=2.13.0",
]
dev = [
    "jupyter>=1.0.0",
    "plotly>=5.15.0",
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
deploy = [
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
]

[project.urls]
Repository = "https://github.com/inforix/play2048"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
